--- a/package.json
+++ b/package.json
@@ -1,45 +1,47 @@
 {
     "name": "@botcity/botcity-maestro-sdk",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Botcity Maestro SDK",
     "author": "botcity",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-      "clean": "rimraf dist",
-      "prebuild": "npm run clean",
-      "build": "tsc"
+        "clean": "rimraf dist",
+        "prebuild": "npm run clean",
+        "build": "tsc",
+        "release": "standard-version"
     },
     "contributors": [
-      {
-        "name": "Kayque Govetri",
-        "email": "kayque.govetri@botcity.dev",
-        "url": "https://github.com/kayqueGovetri"
-      }
+        {
+            "name": "Kayque Govetri",
+            "email": "kayque.govetri@botcity.dev",
+            "url": "https://github.com/kayqueGovetri"
+        }
     ],
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/botcity-dev/botcity-maestro-sdk-js"
+        "type": "git",
+        "url": "git+https://github.com/botcity-dev/botcity-maestro-sdk-js"
     },
     "homepage": "https://github.com/botcity-dev/botcity-maestro-sdk-js#readme",
     "license": "MIT",
     "devDependencies": {
-      "@types/node": "^14.18.26",
-      "rimraf": "^3.0.2",
-      "typescript": "^4.2.4"
+        "@types/node": "^14.18.26",
+        "rimraf": "^3.0.2",
+        "standard-version": "^9.5.0",
+        "typescript": "^4.2.4"
     },
     "dependencies": {
-      "axios": "^0.27.2",
-      "form-data": "^4.0.0"
+        "axios": "^0.27.2",
+        "form-data": "^4.0.0"
     },
     "engines": {
-      "node": ">= 16.0.0",
-      "npm": ">= 3.0.0"
+        "node": ">= 16.0.0",
+        "npm": ">= 3.0.0"
     },
     "keywords": [
-      "botcity",
-      "automation",
-      "automation desktop",
-      "sdk"
+        "botcity",
+        "automation",
+        "automation desktop",
+        "sdk"
     ]
-  }
+}
