--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^14.18.26",
+        "news-fragments": "^2.0.5",
+        "release-it": "^15.4.1",
         "rimraf": "^3.0.2",
         "standard-version": "^9.5.0",
         "typescript": "^4.2.4"
