--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@botcity/botcity-maestro-sdk",
-    "version": "0.1.4",
+    "version": "0.1.13",
     "description": "Botcity Maestro SDK",
     "author": "botcity",
     "main": "dist/index.js",
@@ -9,7 +9,12 @@
         "clean": "rimraf dist",
         "prebuild": "npm run clean",
         "build": "tsc",
-        "release": "release-it"
+        "release": "release-it",
+        "lint": "eslint src/**/*.{js,ts,json}",
+        "lint:fix": "eslint --fix src/**/*.{js,ts,json}",
+        "format": "prettier --write src/**/*.{js,ts,md,json} --config ./.prettierrc",
+        "commit": "git-cz",
+        "prepare": "husky install"
     },
     "release-it": {
         "npm": {
@@ -37,13 +42,29 @@
         "url": "git+https://github.com/botcity-dev/botcity-maestro-sdk-js"
     },
     "homepage": "https://github.com/botcity-dev/botcity-maestro-sdk-js#readme",
-    "license": "MIT",
+    "license": "Apache License 2.0",
     "devDependencies": {
+        "@commitlint/cli": "17.1.2",
+        "@commitlint/config-conventional": "17.1.0",
+        "@rocketseat/eslint-config": "1.1.3",
         "@types/node": "^14.18.26",
-        "news-fragments": "^2.0.5",
+        "@typescript-eslint/eslint-plugin": "^5.36.2",
+        "@typescript-eslint/parser": "5.36.2",
+        "commitizen": "4.2.5",
+        "cz-conventional-changelog": "3.3.0",
+        "eslint": "^8.23.0",
+        "eslint-config-prettier": "8.5.0",
+        "eslint-config-standard-with-typescript": "^22.0.0",
+        "eslint-import-resolver-typescript": "3.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.2.5",
+        "eslint-plugin-prettier": "4.2.1",
+        "eslint-plugin-promise": "^6.0.1",
+        "husky": "8.0.1",
+        "prettier": "2.7.1",
         "release-it": "^15.4.1",
         "rimraf": "^3.0.2",
-        "typescript": "^4.2.4"
+        "typescript": "^4.8.2"
     },
     "dependencies": {
         "axios": "^0.27.2",
@@ -58,5 +79,10 @@
         "automation",
         "automation desktop",
         "sdk"
-    ]
+    ],
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    }
 }
