ci: update to new version 0.2.0 and insert eslint in pipeline

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,6 +17,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
         run: npm install
+      - name: Run eslint
+        run: npm run lint
       - name: Execute build 🔧
         run: npm run build
       - name: Publish package on NPM 📦
