--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,14 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest/globals": true
     },
-    "extends": "standard-with-typescript",
+    "parser": "@typescript-eslint/parser",
+    "extends": [
+        "standard-with-typescript",
+        "plugin:jest/recommended"
+    ],
     "overrides": [
     ],
     "parserOptions": {
@@ -11,6 +16,12 @@
         "sourceType": "module",
         "project": "tsconfig.json"
     },
+    "plugins":  ["jest"],
     "rules": {
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/prefer-to-have-length": "warn",
+        "jest/valid-expect": "error"
     }
 }
