--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@botcity/botcity-maestro-sdk",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "description": "Botcity Maestro SDK",
     "author": "botcity",
     "main": "dist/index.js",
@@ -9,23 +9,14 @@
         "clean": "rimraf dist",
         "prebuild": "npm run clean",
         "build": "tsc",
-        "release": "release-it",
-        "lint": "eslint src/**/*.{js,ts,json}",
-        "lint:fix": "eslint --fix src/**/*.{js,ts,json}",
+        "lint": "eslint src/**/*.{js,ts,json} tests/**/*.{js,ts,json}",
+        "lint:fix": "eslint --fix src/**/*.{js,ts,json} --fix tests/**/*.{js,ts,json}",
         "format": "prettier --write src/**/*.{js,ts,md,json} --config ./.prettierrc",
         "commit": "git-cz",
-        "prepare": "husky install"
-    },
-    "release-it": {
-        "npm": {
-            "publish": false
-        },
-        "github": {
-            "release": true
-        },
-        "git": {
-            "commitMessage": "chore: release ${version}"
-        }
+        "prepare": "husky install",
+        "test": "jest",
+        "test:watch": "jest --detectOpenHandles --watchAll",
+        "test:coverage": "jest --detectOpenHandles --coverage"
     },
     "contributors": [
         {
@@ -47,6 +38,7 @@
         "@types/node": "^14.18.26",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "5.36.2",
+        "axios-mock-adapter": "^1.21.2",
         "commitizen": "4.2.5",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^8.23.0",
@@ -54,13 +46,16 @@
         "eslint-config-standard-with-typescript": "^22.0.0",
         "eslint-import-resolver-typescript": "3.5.0",
         "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jest": "^27.0.4",
         "eslint-plugin-n": "^15.2.5",
         "eslint-plugin-prettier": "4.2.1",
         "eslint-plugin-promise": "^6.0.1",
         "husky": "8.0.1",
+        "jest": "^29.0.3",
+        "jest-mock-axios": "^4.7.0-beta",
         "prettier": "2.7.1",
-        "release-it": "^15.4.1",
         "rimraf": "^3.0.2",
+        "ts-jest": "^29.0.1",
         "typescript": "^4.8.2"
     },
     "dependencies": {
