--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "esModuleInterop": true,
       "experimentalDecorators": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "include": ["src/**/*", "tests/**/*"],
+    "exclude": ["node_modules"]
   }
