ci: insert command test in pipeline build and pull requests

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,3 +25,18 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  release:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: "✏️ Generate release changelog"
+        uses: heinrichreimer/github-changelog-generator-action@v2.3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} 
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+         body_path: CHANGELOG.md
