--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "lint:fix": "eslint --fix src/**/*.{js,ts,json}",
         "format": "prettier --write src/**/*.{js,ts,md,json} --config ./.prettierrc",
         "commit": "git-cz",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test": "jest"
     },
     "release-it": {
         "npm": {
@@ -44,7 +45,10 @@
         "@commitlint/cli": "17.1.2",
         "@commitlint/config-conventional": "17.1.0",
         "@rocketseat/eslint-config": "1.1.3",
+        "@types/jest": "^29.5.12",
         "@types/node": "^14.18.33",
+        "@types/tmp": "^0.2.6",
+        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^5.36.2",
         "@typescript-eslint/parser": "5.36.2",
         "commitizen": "4.2.5",
@@ -58,13 +62,19 @@
         "eslint-plugin-prettier": "4.2.1",
         "eslint-plugin-promise": "^6.0.1",
         "husky": "8.0.1",
+        "jest": "^29.7.0",
+        "moment": "^2.30.1",
         "prettier": "2.7.1",
         "release-it": "^15.4.1",
         "rimraf": "^3.0.2",
-        "typescript": "^4.8.2"
+        "tmp": "^0.2.3",
+        "ts-jest": "^29.1.2",
+        "typescript": "^4.8.2",
+        "uuid": "^9.0.1"
     },
     "dependencies": {
         "axios": "^1.6.0",
+        "dotenv": "^16.4.5",
         "form-data": "^4.0.0"
     },
     "engines": {
