--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,6 +18,8 @@ jobs:
         run: npm install
       - name: Run eslint
         run: npm run lint
+      - name: Run tests
+        run: npm run jest
       - name: Execute build 🔧
         run: npm run build
       - name: Publish package on NPM 📦
