--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -14,3 +14,7 @@ jobs:
         run: npm install
       - name: Run eslint
         run: npm run lint
+      - name: Run tests
+        run: npm run jest
+      - name: Execute build 🔧
+        run: npm run build
