--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: Run eslint
         run: npm run lint
       - name: Run tests
-        run: npm run jest
+        run: npm run test
       - name: Execute build 🔧
         run: npm run build
