--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,6 +20,10 @@ jobs:
         run: npm run lint
       - name: Run tests
         run: npm run test
+        env:
+          BOTCITY_SERVER: ${{ secrets.BOTCITY_SERVER }}
+          BOTCITY_LOGIN: ${{ secrets.BOTCITY_LOGIN }}
+          BOTCITY_KEY: ${{ secrets.BOTCITY_KEY }}
       - name: Execute build 🔧
         run: npm run build
       - name: Publish package on NPM 📦
